2002-06-14  Junichi Uekawa  <dancer@debian.org>

	* configure.in: 0.0.19.4

	* debian/rules (configure-stamp): fix up configure script to 
	put files in /etc/dsh, and mandir in /usr/share/man

	* Makefile.am (EXTRA_DIST): add autogen.sh to dist target
	(EXTRA_DIST): add sysconf_DATA

	* parameter.c (parse_options): use DSHCONFDIR instead of hardcoding /etc/dsh

	* Makefile.am (dsh_CFLAGS): add -DDSHCONFDIR to dsh_CFLAGS

	* AUTHORS: updated authors list to add notes on solaris port 

	* Makefile.am (EXTRA_DIST): add dsh.conf to EXTRA_DIST target.

	* dsh.c: 
	* linkedlist.c: 
	* parameter.c: reorder includes to get dsh.h earlier, and remove reference to config.h

	* dsh.h (getline): add declaration for getline function, if it doesn't exist.
	include config.h here.

	* dsh.c: remove unnecessary getopt.
	(getline): remove the static declaration.

	* configure.in: 0.0.19.3

	* parameter.c, dsh.c, linkedlist.c: revert use of <config.h> to use "config.h".
	someone else is providing config.h somewhere, breaking my build.

	* parameter.c: add ifdef for HAVE_GETOPT_H, and getopt_long
	Thanks to Petter Reinholdtsen <pere@hungry.com>

	* dsh.c (asprintf): add asprintf definition.
	Thanks to Petter Reinholdtsen <pere@hungry.com>
	(getline): copy getline definition from libdshconfig.

	* configure.in: add AC_CHECK_HEDAERS/FUNCS for getopt
	Thanks to Petter Reinholdtsen <pere@hungry.com>

2002-06-13  Junichi Uekawa  <dancer@debian.org>

	* configure.in: 0.0.19.2

	* debian/rules (binary-arch): removed the installman specifics, because 
	the upstream makefile will handle it.

	* Makefile.am (man_MANS): add dsh.1 to man_MANS, and EXTRA_DIST
	Thanks to Petter Reinholdtsen <pere@hungry.com>

	* configure.in: check libdshconfig for open_dshconfig

	* linkedlist.c, parameter.c, dsh.c: #include <config.h> instead of "config.h"

2002-06-12  Junichi Uekawa  <dancer@debian.org>

	* configure.in: version 0.0.19.1

	* autogen.sh: add --force
