@@ -24,8 +24,12 @@
 #include "config.h"
 
 #define DSH_CONF DSHCONFDIR "/dsh.conf"
+
 #ifndef HAVE_GETLINE
 /* an imcomplete, and wrong implementation of getline */
 ssize_t getline (char **LINEPTR, size_t *N, FILE *STREAM);
 #endif
 
+#ifndef HAVE_ASPRINTF
+int asprintf(char **strp, const char *fmt, ...)
+#endif
